clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_here_string_with_variable.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 186
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat <<< $variable",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(HereString(None, Word(
                    value: "$variable",
                    loc: "[location]",
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
