clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_process_substitution_write.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 162
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "tee >(grep error > errors.txt)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "tee",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  ProcessSubstitution(Write, SubshellCommand(
                    list: CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "grep",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "error",
                                  loc: "[location]",
                                )),
                                IoRedirect(File(None, Write, Filename(Word(
                                  value: "errors.txt",
                                  loc: "[location]",
                                )))),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ]),
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
