clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_redirect_fd_close.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 92
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "command 2>&-",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "command",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(Some(2), DuplicateOutput, Duplicate(Word(
                    value: "-",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
