clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_redirect_input.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 24
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat < input.txt",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(None, Read, Filename(Word(
                    value: "input.txt",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
