clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_redirect_multiple.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 138
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "command < input.txt > output.txt 2>&1",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "command",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(None, Read, Filename(Word(
                    value: "input.txt",
                    loc: "[location]",
                  )))),
                  IoRedirect(File(None, Write, Filename(Word(
                    value: "output.txt",
                    loc: "[location]",
                  )))),
                  IoRedirect(File(Some(2), DuplicateOutput, Duplicate(Word(
                    value: "1",
                    loc: "[location]",
                  )))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
