clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__redirections__parse_redirect_output_and_error.snap
---
source: clash-brush-parser/src/parser/tests/redirections.rs
assertion_line: 116
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "command &> file.txt",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "command",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(OutputAndError(Word(
                    value: "file.txt",
                    loc: "[location]",
                  ), false)),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
